# github-devstats

./: .bazelignore  .bazelproject  .gitignore  BUILD  README.md  WORKSPACE  docker-compose.yml  go.mod  go.sum
client/: BUILD.bazel  client.go
cmd/github-devstats/: BUILD.bazel  main.go
event/: BUILD.bazel  pr.go  pr_test.go
sql/: BUILD.bazel  db.go  event.go  event_test.go
sql/commit/: BUILD.bazel  commit.go  commit_test.go
sql/migrations/: 10_create_prs_index_on_author_ids.up.sql  11_create_prs_index_on_merged_at.up.sql  12_prs_add_go_tests_added.up.sql  13_prs_add_go_test_files_modified.up.sql  1_init.up.sql  2_add_many_columns.up.sql  3_create_users.up.sql  4_create_user_teams.down.sql  4_create_user_teams.up.sql  5_create_prs.down.sql  5_create_prs.up.sql  6_create_pr_commits_by_type.down.sql  6_create_pr_commits_by_type.up.sql  7_create_pr_files_added_by_ext.down.sql  7_create_pr_files_added_by_ext.up.sql  8_create_pr_files_modified_by_ext.down.sql  8_create_pr_files_modified_by_ext.up.sql  9_drop_pr_events_table.up.sql  BUILD.bazel
sql/pr/: BUILD.bazel  pr.go  pr_test.go
sql/schema/: BUILD.bazel  migration.go
sql/user/: BUILD.bazel  user.go  user_test.go
