load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["pr.go"],
    importpath = "github.com/krlvi/github-devstats/event",
    visibility = ["//visibility:public"],
    deps = [
        "//client:go_default_library",
        "@com_github_google_go_github//github:go_default_library",
    ],
)
