load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["pr.go"],
    importpath = "github.com/krlvi/github-devstats/event",
    visibility = ["//visibility:public"],
    deps = [
        "//client:go_default_library",
        "//sql/user:go_default_library",
        "@com_github_google_go_github//github:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["pr_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
