load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["event.go"],
    importpath = "github.com/krlvi/github-devstats/sql",
    visibility = ["//visibility:public"],
    deps = [
        "//event:go_default_library",
        "@com_github_go_sql_driver_mysql//:go_default_library",
        "@com_github_golang_migrate_migrate_v4//:go_default_library",
        "@com_github_golang_migrate_migrate_v4//database/mysql:go_default_library",
        "@com_github_golang_migrate_migrate_v4//source/file:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["event_test.go"],
    data = [
        "//sql/migrations:migrations",
    ],
    embed = [":go_default_library"],
)
