load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["db.go"],
    importpath = "github.com/krlvi/github-devstats/sql",
    visibility = ["//visibility:public"],
    deps = [
        "//event:go_default_library",
        "//sql/commit:go_default_library",
        "//sql/pr:go_default_library",
        "//sql/schema:go_default_library",
    ],
)
